--- a/index.html
+++ b/index.html
@@ -1079,8 +1079,8 @@
         <h1>Merry Christmas 
             ebe iu !</h1>
         <h2>From your chicken with ♥. 
-            Wishing you a best chrístmast ever. 
-            I'll always by your side. Anh yeu em</h2>
+            Wishing you the best chrístmast ever. 
+            I'll always be by your side. Anh yeu em</h2>
     </div>
     <div class="window ">
         <div class="santa">
